Fix alignment navbar

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,6 +1,6 @@
 .banner {
     display: flex;
-    padding: 96px 0;
+    padding: 96px 24px;
 }
 
 .banner__intro {
@@ -8,11 +8,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 24px;
+    padding-right: 24px;
 }
 
 .banner__header {
-    font-size: 2.25rem;
+    font-size: 2rem;
 }
 
 .banner__image-wrap {
